--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -353,3 +353,28 @@ pages = {187--192}
  year = {1982},
  pages = {175--181},
  }
+
+
+@inproceedings{Shafique:DAC'14,
+author={ Shafique,Muhammad and Garg, Shelly and Henkel, Jo04Rg and Marculescu, Dinan},
+title={The EDA challenges in the dark silicon era},
+booktitle= dac,
+year={2014},
+pages = {1-6},
+month ={June.},
+}
+
+@book{Boyd:Convex_BOOK'06,
+      author       = "Stephen Boyd and Lieven Vandenberghe ",
+      title        = "Convex Optimization",
+      publisher    = "the United States of America by Cambridge University Press, New York",
+      year         = "2006",
+}
+
+@inproceedings{Pagani:CODES'14,
+  title={TSP: Thermal Safe Power - Efficient power budgeting for many-core systems in dark silicon},
+  author={Pagani, Santiago and Khdr, Heba and Munawar, Waqaas and Chen, Jian Jia and Shafique, Muhammad and Li, Minming and Henkel, J02rg},
+  booktitle={Hardware/Software Codesign and System Synthesis (CODES+ISSS), 2014 International Conference on},
+  pages={1-10},
+  year={2014}
+}
