--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -397,7 +397,7 @@ month ={June.},
   organization={IEEE}
 }
 
-@article{marella2014holistic,
+@article{Marella:TVLSI'14,
   author={Marella, Sravan K and Sapatnekar, Sachin S},
   title={A Holistic Analysis of Circuit Performance Variations in {3-D ICs} With Thermal and TSV-Induced Stress Considerations},
   journal = tvlsi,
