--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -406,3 +406,12 @@ month ={June.},
   pages = {1308-1321},
   month =  {July}
 }
+
+@inproceedings{Xiong:TENCON'05,
+  title={Two-phases Parallel Neural Network Algorithm Based on RPROP},
+  author={Xiong, Zhongyang and Zhang, Yufang and Ou, Ling and Li, Li},
+  booktitle={TENCON 2005 2005 IEEE Region 10},
+  pages={1--6},
+  year={2005},
+  organization={IEEE}
+}
