--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -410,7 +410,7 @@ month ={June.},
 @inproceedings{Xiong:TENCON'05,
   title={Two-phases Parallel Neural Network Algorithm Based on RPROP},
   author={Xiong, Zhongyang and Zhang, Yufang and Ou, Ling and Li, Li},
-  booktitle={TENCON 2005 2005 IEEE Region 10},
+  booktitle={Region Conference-International Technical Conference (TENCON), IEEE Region 10},
   pages={1--6},
   year={2005},
   organization={IEEE}
