--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -415,3 +415,19 @@ month ={June.},
   year={2005},
   organization={IEEE}
 }
+
+@inproceedings{Zou:DATE'13,
+  title={Thermomechanical stress-aware management for 3D IC designs},
+  author={Zou, Qiaosha and Zhang, Tao and Kursun, Eren and Xie, Yuan},
+  booktitle = date,
+  pages={1255-1258},
+  year={2013},
+}
+
+@inproceedings{Marella:TVLSI'14,
+  title={A Holistic Analysis of Circuit Performance Variations in 3-D ICs With Thermal and TSV-Induced Stress Considerations},
+  author={Sravan K. Marella and  Sachin S. Sapatnekar},
+  booktitle = tvlsi,
+  pages={1308 - 1321},
+  year={2014},
+}
