--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -424,3 +424,12 @@ month ={June.},
   year={2013},
 }
 
+@inproceedings{Chen:MSF'13,
+  title={Numerical Simulation of Casting Thermal Stress and Deformation Based on Finite Difference Method},
+  author={Chen, Tao and Liao, Dun Ming and Zhou, Jian Xin},
+  booktitle={Materials Science Forum (MSF)},
+  volume={762},
+  pages={224--229},
+  year={2013},
+  organization={Trans Tech Publ}
+}
