adding some dark silicon papers

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -69,7 +69,7 @@ author={Hai Wang and Sheldon Tan and Guangdeng Liao and Rafael Quintanilla and A
 title={Full-chip runtime error-tolerant thermal estimation and prediction for practical thermal management},
 booktitle= iccad,
 year={2011},
-pages = {716-723},
+pages = {716--723},
 month ={Nov.},
 }
 
@@ -81,7 +81,7 @@ month ={Nov.},
   title =        {Power, Thermal, and Reliability Modeling in Nanometer-Scale Microprocessors},
   journal =      {IEEE Micro},
   year =         {2007},
-  pages =    {49-62},
+  pages =    {49--62},
   volume = {27},
   number = {3},
   month = {May-June},
@@ -101,7 +101,7 @@ month ={Nov.},
   author =       {Michael Powell and Mohamed Gomaa and T.N. Vijaykumar},
   title =        {{Heat-and-Run}: Leveraging {SMT} and {CMP} to Manage Power Density Through the Operating System},
   booktitle =    asplos,
-  pages =    {260-270},
+  pages =    {260--270},
   year =     {2004},
  month = {October},
  location = {Boston, MA, USA},
@@ -124,7 +124,7 @@ pages = {579--584}
   year =         {2011},
   volume =   {19},
   number =   {10},
-  pages =     {1884-1897},
+  pages =     {1884--1897},
   month =     {October},
 }
 
@@ -181,7 +181,7 @@ pages = {187--192}
   year =         {2009},
   volume =   {56},
   number =   {9},
-  pages =     {1994-2007},
+  pages =     {1994--2007},
   month =     {September},
 }
 
@@ -189,7 +189,7 @@ pages = {187--192}
   author =       {David Brooks and Margaret Martonosi},
   title =        {Dynamic thermal management for high-performance microprocessors},
   booktitle =    hpca,
-  pages =    {171-182},
+  pages =    {171--182},
   year =     {2001},
   month =     {Jan.},
  location = {Monterrey, Mexico},
@@ -241,7 +241,7 @@ pages = {187--192}
  title = {Temperature-Constrained Power Control for Chip Multiprocessors with Online Model Estimation},
  booktitle = isca,
  year = {2009},
- pages = {314-324},
+ pages = {314--324},
 }
 
 @Article{Bartolini:TPDS'13,
@@ -251,7 +251,7 @@ pages = {187--192}
   year =         {2013},
   volume =   {24},
   number =   {1},
-  pages =     {170-183},
+  pages =     {170--183},
   month =     {January},
 }
 
@@ -278,7 +278,7 @@ pages = {187--192}
   journal = {Naval Research Logistics Quarterly},
   year = {1955},
   volume = {2},
-  pages = {83-97}
+  pages = {83--97}
 }
 
 @Article{Munkres:SIAM'57,
@@ -288,7 +288,7 @@ pages = {187--192}
   year = {1957},
   volume = {5},
   number = {1},
-  pages = {32-38}
+  pages = {32--38}
 }
 
 @Article{Huang:TVLSI'06,
@@ -296,7 +296,7 @@ pages = {187--192}
   title =        {{HotSpot}: A Compact Thermal Modeling Methodology for Early-Stage {VLSI} Design},
   journal =      tvlsi,
   year =         {2006},
-  pages =    {501-513},
+  pages =    {501--513},
   volume = {14},
   number = {5},
   month = {May},
@@ -360,7 +360,7 @@ author={ Shafique,Muhammad and Garg, Shelly and Henkel, Jo04Rg and Marculescu, D
 title={The EDA challenges in the dark silicon era},
 booktitle= dac,
 year={2014},
-pages = {1-6},
+pages = {1--6},
 month ={June.},
 }
 
@@ -372,10 +372,10 @@ month ={June.},
 }
 
 @inproceedings{Pagani:CODES'14,
-  title={TSP: Thermal Safe Power - Efficient power budgeting for many-core systems in dark silicon},
+  title={{TSP}: Thermal Safe Power - Efficient power budgeting for many-core systems in dark silicon},
   author={Pagani, Santiago and Khdr, Heba and Munawar, Waqaas and Chen, Jian Jia and Shafique, Muhammad and Li, Minming and Henkel, J02rg},
   booktitle={Hardware/Software Codesign and System Synthesis (CODES+ISSS), 2014 International Conference on},
-  pages={1-10},
+  pages={1--10},
   year={2014}
 }
 
@@ -403,7 +403,7 @@ month ={June.},
   journal = tvlsi,
   year={2014},
   volume = {23},
-  pages = {1308-1321},
+  pages = {1308--1321},
   month =  {July}
 }
 
@@ -420,7 +420,7 @@ month ={June.},
   title={Thermomechanical stress-aware management for 3D IC designs},
   author={Zou, Qiaosha and Zhang, Tao and Kursun, Eren and Xie, Yuan},
   booktitle = date,
-  pages={1255-1258},
+  pages={1255--1258},
   year={2013},
 }
 
@@ -432,4 +432,24 @@ month ={June.},
   pages={224--229},
   year={2013},
   organization={Trans Tech Publ}
+}
+
+@article{Esmaeilzadeh:MICRO'12,
+  author={Hadi Esmaeilzadeh and Emily Blem and Renee St. Amant and Karthikeyan Sankaralingam and Doug Burger},
+  title={Dark silicon and the end of multicore scaling},
+  journal =  {IEEE Micro},
+  year={2012},
+  volume = {32},
+  number = {3},
+  pages = {122--134},
+  month =  {May}
+}
+
+@inproceedings{Muthukaruppan:DAC'13,
+  title={Hierarchical Power Management for Asymmetric Multi-Core in Dark Silicon Era},
+  author={Thannirmalai Somu Muthukaruppan and Mihai Pricopi and Vanchinathan Venkataramani and Tulika Mitra and Sanjay Vishin},
+  booktitle= dac,
+  pages={1--9},
+  year={2013},
+ month={May}
 }
