--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -40,6 +40,7 @@
 @string{temm = "Proc. 1st International IEEE Workshop on Thermal Modeling and Management: Chips to Data Centers (TEMM) "}
 @string{sigops = "ACM SIGPLAN NOTICES "}
 @string{istfa = "35th International Symposium for Testing and Failure Analysis, ISTFA"}
+@string{acmcomm="Communications of the ACM"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -379,13 +380,21 @@ month ={June.},
   year={2014}
 }
 
+
+@inproceedings{Lau:ECTC'09,
+  title={Thermal Management of {3D IC} Integration with {TSV} (Through Silicon Via)},
+  author={John H. Lau and Tang Gong Yue},
+  booktitle={Electronic Components and Technology Conference (ECTC)},
+  pages={635--640},
+  year={2009},
+}
+
 @inproceedings{Lu:ECTC'09,
   title={Thermo-mechanical reliability of {3-D ICs} containing through silicon vias},
-  author={Lu, Kuan H and Zhang, Xuefeng and Ryu, Suk-Kyu and Im, Jay and Huang, Rui and Ho, Paul S},
-  booktitle={Electronic Components and Technology Conference, 2009. ECTC 2009. 59th},
+  author={Kuan H. Lu and Xuefeng Zhang and Suk-Kyu Ryu and Jay Im and Rui Huang and Paul S. Ho},
+  booktitle={Electronic Components and Technology Conference (ECTC)},
   pages={630--634},
   year={2009},
-  organization={IEEE}
 }
 
 @inproceedings{Xin:CASoN'10,
@@ -399,7 +408,7 @@ month ={June.},
 
 @article{Marella:TVLSI'14,
   author={Marella, Sravan K and Sapatnekar, Sachin S},
-  title={A Holistic Analysis of Circuit Performance Variations in {3-D ICs} With Thermal and TSV-Induced Stress Considerations},
+  title={A Holistic Analysis of Circuit Performance Variations in {3-D ICs} With Thermal and {TSV}-Induced Stress Considerations},
   journal = tvlsi,
   year={2014},
   volume = {23},
@@ -408,16 +417,15 @@ month ={June.},
 }
 
 @inproceedings{Xiong:TENCON'05,
-  title={Two-phases Parallel Neural Network Algorithm Based on RPROP},
+  title={Two-phases Parallel Neural Network Algorithm Based on {RPROP}},
   author={Xiong, Zhongyang and Zhang, Yufang and Ou, Ling and Li, Li},
-  booktitle={Region Conference-International Technical Conference (TENCON), IEEE Region 10},
+  booktitle={IEEE TENCON},
   pages={1--6},
   year={2005},
-  organization={IEEE}
 }
 
 @inproceedings{Zou:DATE'13,
-  title={Thermomechanical stress-aware management for 3D IC designs},
+  title={Thermomechanical stress-aware management for {3D IC} designs},
   author={Zou, Qiaosha and Zhang, Tao and Kursun, Eren and Xie, Yuan},
   booktitle = date,
   pages={1255--1258},
@@ -452,4 +460,53 @@ month ={June.},
   pages={1--9},
   year={2013},
  month={May}
+}
+
+@inproceedings{Li:ISCA'06,
+  title={Design and Management of {3D} Chip Multiprocessors Using Network-in-Memory},
+  author={Feihui Li and Chrysostomos Nicopoulos and Thomas Richardson and Yuan Xie and Vijaykrishnan Narayanan and Mahmut Kandemir},
+  booktitle= isca,
+  pages={130--141},
+  year={2006},
+}
+
+@inproceedings{Sridhar:ICCAD'10,
+  title={{3D-ICE}: Fast compact transient thermal modeling for {3D ICs} with inter-tier liquid cooling},
+  author={Arvind Sridhar and Alessandro Vincenzi and Martino Ruggiero and Thomas Brunschwiler and David Atienza},
+  booktitle= iccad,
+  pages={463--470},
+  year={2010},
+}
+
+@article{Patti:IEEEPROC'06,
+  author={Robert S. Patti},
+  title={Three-Dimensional Integrated Circuits and the Future of System-on-Chip Designs},
+  journal =  ieeeproc,
+  year={2006},
+  volume = {94},
+  number = {6},
+  pages = {1214--1224},
+  month =  {June}
+}
+
+@article{Jung:TCAD'12,
+  author={Moongon Jung and Joydeep Mitra and David Z. Pan and Sung Kyu Lim},
+  title={{TSV} Stress-Aware Full-Chip Mechanical Reliability Analysis and Optimization for {3-D IC}},
+  journal =  tcad,
+  year={2012},
+  volume = {31},
+  number = {8},
+  pages = {1194--1207},
+  month =  {August}
+}
+
+@article{Jung:ACMCOMM'14,
+  author={Moongon Jung and Joydeep Mitra and David Z. Pan and Sung Kyu Lim},
+  title={{TSV} Stress-Aware Full-Chip Mechanical Reliability Analysis and Optimization for {3D IC}},
+  journal =  acmcomm,
+  year={2014},
+  volume = {57},
+  number = {1},
+  pages = {107--115},
+  month =  {January}
 }
