--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -384,7 +384,7 @@ month ={June.},
 @inproceedings{Lau:ECTC'09,
   title={Thermal Management of {3D IC} Integration with {TSV} (Through Silicon Via)},
   author={John H. Lau and Tang Gong Yue},
-  booktitle={Electronic Components and Technology Conference (ECTC)},
+  booktitle={in Proc. Electronic Components and Technology Conference (ECTC)},
   pages={635--640},
   year={2009},
 }
@@ -392,7 +392,7 @@ month ={June.},
 @inproceedings{Lu:ECTC'09,
   title={Thermo-mechanical reliability of {3-D ICs} containing through silicon vias},
   author={Kuan H. Lu and Xuefeng Zhang and Suk-Kyu Ryu and Jay Im and Rui Huang and Paul S. Ho},
-  booktitle={Electronic Components and Technology Conference (ECTC)},
+  booktitle={in Proc. Electronic Components and Technology Conference (ECTC)},
   pages={630--634},
   year={2009},
 }
@@ -419,7 +419,7 @@ month ={June.},
 @inproceedings{Xiong:TENCON'05,
   title={Two-phases Parallel Neural Network Algorithm Based on {RPROP}},
   author={Xiong, Zhongyang and Zhang, Yufang and Ou, Ling and Li, Li},
-  booktitle={IEEE TENCON},
+  booktitle={in Proc. IEEE TENCON},
   pages={1--6},
   year={2005},
 }
@@ -432,14 +432,13 @@ month ={June.},
   year={2013},
 }
 
-@inproceedings{Chen:MSF'13,
+@article{Chen:MSF'13,
   title={Numerical Simulation of Casting Thermal Stress and Deformation Based on Finite Difference Method},
   author={Chen, Tao and Liao, Dun Ming and Zhou, Jian Xin},
-  booktitle={Materials Science Forum (MSF)},
+  journal={Materials Science Forum (MSF)},
   volume={762},
   pages={224--229},
   year={2013},
-  organization={Trans Tech Publ}
 }
 
 @article{Esmaeilzadeh:MICRO'12,
