--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -120,7 +120,7 @@ pages = {579--584}
 
 @Article{Chantem:TVLSI'11,
   author =       {Thidapat Chantem and Sharon Hu and Robert Dick},
-  title =        {Temperature-Aware Scheduling and Assignment for Hard Real-Time Applications on MPSoCs},
+  title =        {Temperature-Aware Scheduling and Assignment for Hard Real-Time Applications on {MPSoCs}},
   journal =     tvlsi,
   year =         {2011},
   volume =   {19},
@@ -131,7 +131,7 @@ pages = {579--584}
 
 @inproceedings{Liu:DATE'12,
 author = {Guanglei Liu and Ming Fan and Gang Quan},
-title = {{Neigbor-Aware Dynamic Thermal Management for Multi-core Platform}},
+title = {Neigbor-Aware Dynamic Thermal Management for Multi-core Platform},
 booktitle = date,
 year = {2012},
 month = {March},
@@ -151,7 +151,7 @@ pages = {187--192}
 
 @inproceedings{Ebi:ICCAD'09,
  author = {Thomas Ebi and {Mohammad Abdullah} {Al Faruque} and J\"{o}rg Henkel},
- title = {{TAPE}: thermal-aware agent-based power economy for multi/many-core architectures},
+ title = {{TAPE}: Thermal-aware agent-based power economy for multi/many-core architectures},
  booktitle = iccad,
  year = {2009},
  location = {San Jose, CA, USA},
@@ -275,7 +275,7 @@ pages = {187--192}
 
 @Article{Kuhn:NRLQ'55,
   author = {Harold Kuhn},
-  title = {The Hungarian method for the assignment problem},
+  title = {The {Hungarian} method for the assignment problem},
   journal = {Naval Research Logistics Quarterly},
   year = {1955},
   volume = {2},
@@ -358,7 +358,7 @@ pages = {187--192}
 
 @inproceedings{Shafique:DAC'14,
 author={ Shafique,Muhammad and Garg, Shelly and Henkel, Jo04Rg and Marculescu, Dinan},
-title={The EDA challenges in the dark silicon era},
+title={The {EDA} challenges in the dark silicon era},
 booktitle= dac,
 year={2014},
 pages = {1--6},
@@ -375,7 +375,7 @@ month ={June.},
 @inproceedings{Pagani:CODES'14,
   title={{TSP}: Thermal Safe Power - Efficient power budgeting for many-core systems in dark silicon},
   author={Pagani, Santiago and Khdr, Heba and Munawar, Waqaas and Chen, Jian Jia and Shafique, Muhammad and Li, Minming and Henkel, J02rg},
-  booktitle={Hardware/Software Codesign and System Synthesis (CODES+ISSS), 2014 International Conference on},
+  booktitle={Proc. International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)},
   pages={1--10},
   year={2014}
 }
@@ -384,7 +384,7 @@ month ={June.},
 @inproceedings{Lau:ECTC'09,
   title={Thermal Management of {3D IC} Integration with {TSV} (Through Silicon Via)},
   author={John H. Lau and Tang Gong Yue},
-  booktitle={in Proc. Electronic Components and Technology Conference (ECTC)},
+  booktitle={Proc. Electronic Components and Technology Conference (ECTC)},
   pages={635--640},
   year={2009},
 }
@@ -392,7 +392,7 @@ month ={June.},
 @inproceedings{Lu:ECTC'09,
   title={Thermo-mechanical reliability of {3-D ICs} containing through silicon vias},
   author={Kuan H. Lu and Xuefeng Zhang and Suk-Kyu Ryu and Jay Im and Rui Huang and Paul S. Ho},
-  booktitle={in Proc. Electronic Components and Technology Conference (ECTC)},
+  booktitle={Proc. Electronic Components and Technology Conference (ECTC)},
   pages={630--634},
   year={2009},
 }
@@ -419,7 +419,7 @@ month ={June.},
 @inproceedings{Xiong:TENCON'05,
   title={Two-phases Parallel Neural Network Algorithm Based on {RPROP}},
   author={Xiong, Zhongyang and Zhang, Yufang and Ou, Ling and Li, Li},
-  booktitle={in Proc. IEEE TENCON},
+  booktitle={Proc. IEEE TENCON},
   pages={1--6},
   year={2005},
 }
