add some dtm papers

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -509,3 +509,37 @@ month ={June.},
   pages = {107--115},
   month =  {January}
 }
+
+@inproceedings{Cuesta:ISVLSI'10,
+  title={Adaptive Task Migration Policies for Thermal control in {MPSoCs}},
+  author={David Cuesta and Jose Ayala and Jose Hidalgo and David Atienza and Andrea Acquaviva and Enrico Macii},
+  booktitle= {IEEE Annual Symposium on VLSI},
+  pages={110--115},
+  year={2010},
+}
+
+@inproceedings{Khdr:DAC'15,
+  title={Thermal Constrained Resource Management
+for Mixed {ILP-TLP} Workloads in Dark Silicon Chips},
+  author={Heba Khdr and Santiago Pagani and Muhammad Shafique and Jörg Henkel},
+  booktitle= dac,
+  pages={1--6},
+  year={2015},
+}
+
+@inproceedings{Cong:ISLPED'12,
+  title={Energy-Efficient Scheduling on Heterogeneous Multi-Core Architectures},
+  author={Jason Cong and Bo Yuan},
+  booktitle= islped,
+  pages={345--350},
+  year={2012},
+}
+
+@inproceedings{Tan:ASPDAC'15,
+  title={Approximation-Aware Scheduling on Heterogeneous Multi-core Architectures},
+  author={Cheng Tan and Thannirmalai Muthukaruppan and Tulika Mitra and Lei Ju},
+  booktitle= aspdac,
+  pages={618--623},
+  year={2015},
+}
+
