add some dark silicon related papers

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2,7 +2,7 @@
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. European Design and Test Conf. (DATE)"}
-@string{aspdac = "Proc. Asia South Pacific Design Automation Conf. (ASPDAC)"}
+@string{aspdac = "Proc. Asia South Pacific Design Automation Conf. (ASP-DAC)"}
 @string{iccd = "Proc. IEEE Int. Conf. on Computer Design (ICCD)"}
 @string{ispd = "Proc.  Int. Symp. on Physical Design (ISPD)"}
 @string{cicc = "Proc. IEEE Custom Integrated Circuits Conference (CICC) "}
@@ -72,6 +72,17 @@ booktitle= iccad,
 year={2011},
 pages = {716--723},
 month ={Nov.},
+}
+
+@ARTICLE{ShenTan:TODAES'12,
+	author = {Ruijing Shen and Sheldon Tan and Hai Wang and Jinjun Xiong},
+	journal = todaes,
+	title = {Fast Statistical Full-Chip Leakage Analysis for Nanometer {VLSI} Systems},
+	year = {2012},
+        month = {October},
+        volume = {17},
+        number = {4},
+        pages = {51:1--51:19},
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -452,6 +463,17 @@ month ={June.},
   month =  {May}
 }
 
+@article{Taylor:MICRO'13,
+  author={Michael Taylor},
+  title={A Landscape of the New Dark Silicon Design Regime},
+  journal =  {IEEE Micro},
+  year={2013},
+  volume = {33},
+  number = {5},
+  pages = {8--19},
+  month =  {October}
+}
+
 @inproceedings{Muthukaruppan:DAC'13,
   title={Hierarchical Power Management for Asymmetric Multi-Core in Dark Silicon Era},
   author={Thannirmalai Somu Muthukaruppan and Mihai Pricopi and Vanchinathan Venkataramani and Tulika Mitra and Sanjay Vishin},
@@ -541,5 +563,73 @@ for Mixed {ILP-TLP} Workloads in Dark Silicon Chips},
   booktitle= aspdac,
   pages={618--623},
   year={2015},
+}
+
+@inproceedings{Kao:DAC'98,
+  title={{MTCMOS} hierarchical sizing based on mutual exclusive discharge patterns},
+  author={James Kao and Siva Narendra and Anantha Chandrakasan},
+  booktitle= dac,
+  pages={495--500},
+  year={1998},
+}
+
+@inproceedings{Wallentowitz:FPL'12,
+  title={A framework for {Open Tiled Manycore System-On-Chip}},
+  author={Stefan Wallentowitz and Andreas Lankes and Aurang Zaib and Thomas Wild and Andreas Herkersdorf},
+  booktitle= {Proc. International Conference on Field-programmable Logic and Applications (FPL)},
+  pages={535--538},
+  year={2012},
+}
+
+@ONLINE{OpTiMSoC:Online,
+OPTauthor = {},
+title = {{OpTiMSoC}},
+OPTmonth = jun,
+OPTyear = {2009},
+url = {http://www.optimsoc.org}
+}
+
+@ONLINE{OpenRISC:Online,
+OPTauthor = {},
+title = {{OpenRISC}},
+OPTmonth = jun,
+OPTyear = {2009},
+url = {http://opencores.org}
+}
+
+@article{Abdollahi:TVLSI'04,
+  author={Afshin Abdollahi and Farzan Fallah and Massoud Pedram},
+  title={Leakage current reduction in {CMOS} {VLSI} circuits by input vector control},
+  journal =  tvlsi,
+  year={2004},
+  volume = {12},
+  number = {2},
+  pages = {140--154},
+  month =  {February}
+}
+
+@inproceedings{Liu:DATE'07,
+  title={Accurate Temperature-Dependent Integrated Circuit Leakage Power Estimation is Easy},
+  author={Yongpan Liu and Robert Dick and Li Shang and Huazhong Yang},
+  booktitle= date,
+  pages={1--6},
+  year={2007},
+}
+
+@inproceedings{Sarangi:ASPDAC'14,
+  title={{LightSim}: A Leakage Aware Ultrafast Temperature Simulator},
+  author={Smruti Sarangi and Gayathri Ananthanarayanan and M. Balakrishnan},
+  booktitle= aspdac,
+  pages={855--860},
+  year={2014},
+}
+
+@techreport{Liu:BSIM4,
+    Author = {Liu, W. and Cao, K.M. and Jin, X. and Hu, Chenming},
+    Title = {{BSIM} 4.0.0 Technical Notes},
+    Institution = {EECS Department, University of California, Berkeley},
+    Year = {2000},
+    URL = {http://www.eecs.berkeley.edu/Pubs/TechRpts/2000/3863.html},
+    Number = {UCB/ERL M00/39}
 }
 
