minor fix and some dark silicon papers

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -368,7 +368,7 @@ pages = {187--192}
 
 
 @inproceedings{Shafique:DAC'14,
-author={ Shafique,Muhammad and Garg, Shelly and Henkel, Jo04Rg and Marculescu, Dinan},
+author={ Shafique,Muhammad and Garg, Shelly and Henkel, Jorg and Marculescu, Dinan},
 title={The {EDA} challenges in the dark silicon era},
 booktitle= dac,
 year={2014},
@@ -633,3 +633,32 @@ url = {http://opencores.org}
     Number = {UCB/ERL M00/39}
 }
 
+@Article{Hardavellas:MICRO'11,
+  author =       {Nikos Hardavellas and Michael Ferdman and Babak Falsafi and Anastasia Ailamaki},
+  title =        {Toward Dark Silicon in Servers},
+  journal =      {IEEE Micro},
+  year =         {2011},
+  pages =    {6--15},
+  volume = {31},
+  number = {4},
+  month = {July},
+}
+
+@inproceedings{Taylor:DAC'12,
+  title={Is dark silicon useful? Harnessing the four horsemen of the coming dark silicon apocalypse},
+  author={Michael Taylor},
+  booktitle= dac,
+  pages={1131--1136},
+  year={2012},
+}
+
+@Article{Huang:MICRO'11,
+  author =       {Wei Huang and Karthick Rajamani and Mircea Stan and Kevin Skadron},
+  title =        {Scaling with Design Constraints: Predicting the Future of Big Chips},
+  journal =      {IEEE Micro},
+  year =         {2011},
+  pages =    {16--29},
+  volume = {31},
+  number = {4},
+  month = {July-August},
+}
