for nsfc 2016 proposal

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -18,7 +18,7 @@
 @string{jssc = "IEEE J. Solid-State Circuits"}
 @string{tvlsi = "IEEE Trans. on Very Large Scale Integration (VLSI) Systems"}
 @string{tcs = "IEEE Trans. on Circuits and Systems"}
-@string{tcasI = "IEEE Trans. on Circuits and Systems I: Fundamental Theory and Applications"}
+@string{tcasI = "IEEE Trans. on Circuits and Systems I: Regular Papers"}
 @string{tmit = "IEEE Trans. on Microwave Theory and Techniques"}
 @string{tcomp = "IEEE Trans. on Computers"}
 @string{integration = "Integration, the VLSI Journal"}
@@ -379,7 +379,7 @@ month ={June.},
 @book{Boyd:Convex_BOOK'06,
       author       = "Stephen Boyd and Lieven Vandenberghe ",
       title        = "Convex Optimization",
-      publisher    = "the United States of America by Cambridge University Press, New York",
+      publisher    = "Cambridge University Press",
       year         = "2006",
 }
 
@@ -661,4 +661,104 @@ url = {http://opencores.org}
   volume = {31},
   number = {4},
   month = {July-August},
+}
+
+@article{Choudhary:TVLSI'09,
+  author={Puru Choudhary and Diana Marculescu},
+  title={Power Management of Voltage/Frequency Island-Based Systems Using Hardware-Based Methods},
+  journal = tvlsi,
+  year={2009},
+  volume = {17},
+  number = {3},
+  pages = {427--438},
+  month =  {March}
+}
+
+@article{Lopez-Buedo:TCPT'02,
+  author={Sergio Lopez-Buedo and Javier Garrido and Eduardo Boemo},
+  title={Dynamically Inserting, Operating, and Eliminating Thermal Sensors of {FPGA}-Based Systems},
+  journal = {IEEE Trans. on Components and Packaging Technologies},
+  year={2002},
+  volume = {25},
+  number = {4},
+  pages = {561--566},
+  month =  {December}
+}
+
+@inproceedings{Velusamy:ICCD'05,
+  title={Monitoring temperature in {FPGA} based {SoCs}},
+  author={Siva Velusamy and Wei Huang and John Lach and Mircea Stan and Kevin Skadron},
+  booktitle= iccd,
+  pages={634--637},
+  year={2005},
+}
+
+@article{Chen:TCASI'07,
+  author={Poki Chen and Mon-Chau Shie and Zhi-Yuan Zheng and Zi-Fan Zheng and Chun-Yan Chu},
+  title={A Fully Digital Time-Domain Smart Temperature Sensor Realized With 140 {FPGA} Logic Elements},
+  journal = tcasI,
+  year={2007},
+  volume = {54},
+  number = {12},
+  pages = {2661--2668},
+  month =  {December}
+}
+
+@article{Tibshirani:JRSS'11,
+  author={Robert Tibshirani},
+  title={Regression shrinkage and selection via the lasso: a retrospective},
+  journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  year={2011},
+  volume = {73},
+  number = {3},
+  pages = {273--282},
+}
+
+@article{Tibshirani:JRSS'96,
+  author={Robert Tibshirani},
+  title={Regression shrinkage and selection via the lasso},
+  journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  year={1996},
+  volume = {58},
+  number = {1},
+  pages = {267--288},
+}
+
+@inproceedings{Pati:ASILOMAR'93,
+  title={Orthogonal matching pursuit: recursive function approximation with applications to wavelet decomposition},
+  author={Y. C. Pati and R. Rezaiifar and P. S. Krishnaprasad},
+  booktitle= {Proc. Asilomar Conference on Signals, Systems, and Computers},
+  pages={40--44},
+  year={1993},
+}
+
+@article{Cai:TIT'11,
+  author={T. Tony Cai and Lie Wang},
+  title={Orthogonal Matching Pursuit for Sparse Signal
+Recovery With Noise},
+  journal = {IEEE Trans. on Information Theory},
+  year={2011},
+  volume = {57},
+  number = {7},
+  pages = {4680--4688},
+  month =  {July}
+}
+
+@article{Liao:TCAD'05,
+  author={Weiping Liao and Lei He and Kevin M. Lepak},
+  title={Temperature and Supply Voltage Aware Performance
+and Power Modeling at Microarchitecture Level},
+  journal = tcad,
+  year={2005},
+  volume = {24},
+  number = {7},
+  pages = {1042--1053},
+  month =  {July}
+}
+
+@phdthesis{Bonnoit:THESIS'10,
+Author = {Alyssa Bonnoit},
+Title = {Reducing Power using Body Biasing in Microprocessors With Dynamic Voltage/Frequency Scaling},
+School = {Carnegie Mellon University},
+Year = {2010},
 }
