major updates with bib for nsfc 2016 proposal

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -45,6 +45,26 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@inproceedings{WangTan:DATE'12,
+ author = {Hai Wang and Sheldon Tan and Xue-Xin Liu and Ashish Gupta},
+ title = {Runtime power estimator calibration for high-performance microprocessors},
+ booktitle = date,
+ year = {2012},
+ month = {March},
+ location = {Dresden, Germany},
+ pages = {352--357}
+}
+
+@inproceedings{WangTan:DATE'13,
+ author = {Hai Wang and Sheldon Tan and Sahana Swarup and Xue-Xin Liu},
+ title = {A power-driven thermal sensor placement algorithm for dynamic thermal management},
+ booktitle = date,
+ year = {2013},
+ month = {March},
+ location = {Grenoble, France},
+ pages = {1215--1220}
+}
+
 @inproceedings{MaWang:APCCAS'14,
  author = {Jian Ma and Hai Wang and Sheldon Tan and Chi Zhang and He Tang},
  title = {Hybrid Dynamic Thermal Management Method with Model Predictive Control},
@@ -63,6 +83,28 @@
         volume = {18},
         number = {2},
         pages = {28:1--28:27},
+}
+
+@ARTICLE{WangTan:TODAES'12,
+	author = {Hai Wang and Sheldon Tan and Ryan Rakib},
+	journal = todaes,
+	title = {Compact Modeling of Interconnect Circuits over Wide Frequency Band by Adaptive Complex-Valued Sampling Method},
+	year = {2012},
+        month = {January},
+        volume = {17},
+        number = {1},
+        pages = {5:1--5:22},
+}
+
+@ARTICLE{WangMa:TODAES'16,
+	author = {Hai Wang and Jian Ma and Sheldon Tan and Chi Zhang and He Tang and Keheng Huang and Zhenghong Zhang},
+	journal = todaes,
+	title = {Hierarchical Dynamic Thermal Management Method for High-Performance Many-Core Microprocessors},
+	year = {in press},
+        OPTmonth = {March},
+        OPTvolume = {18},
+        OPTnumber = {2},
+        OPTpages = {28:1--28:27},
 }
 
 @conference{WangTan:ICCAD'11,
@@ -237,15 +279,12 @@ pages = {187--192}
 }
 
 @inproceedings{Zanini:ECCTD'09,
- author = {F.~Zanini and D.~Atienza and L.~Benini and G.~{De Micheli}},
+ author = {Francesco Zanini and David Atienza and Luca Benini and Giovanni {De Micheli}},
  title = {Multicore Thermal Management with Model Predictive Control},
- booktitle = {Proc. 19th European Conference on Cicuit Theory and Design},
+ booktitle = {Proc. European Conference on Cicuit Theory and Design},
  year = {2009},
- OPTisbn = {978-1-4244-8192-7},
  pages = {90--95},
  location = {Antalya, Turkey},
- publisher = {IEEE Press},
- address = {Piscataway, NJ, USA},
  }
 
 @inproceedings{Wang:ISCA'09,
@@ -334,12 +373,11 @@ pages = {187--192}
   month =        {July},
 }
 @inproceedings{Dutt:DAC'96,
-  title={A probability-based approach to VLSI circuit partitioning},
+  title={A probability-based approach to {VLSI} circuit partitioning},
   author={Dutt, Shantanu and Deng, Wenyong},
   booktitle= dac,
   pages={100--105},
   year={1996},
-  organization={ACM}
 }
 
 @inproceedings{Kadin:GLSVLSI'09,
@@ -385,9 +423,15 @@ month ={June.},
 
 @inproceedings{Pagani:CODES'14,
   title={{TSP}: Thermal Safe Power - Efficient power budgeting for many-core systems in dark silicon},
-  author={Pagani, Santiago and Khdr, Heba and Munawar, Waqaas and Chen, Jian Jia and Shafique, Muhammad and Li, Minming and Henkel, J02rg},
+  author={Pagani, Santiago and Khdr, Heba and Munawar, Waqaas and Chen, Jian Jia and Shafique, Muhammad and Li, Minming and Henkel, Jorg},
   booktitle={Proc. International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)},
-  pages={1--10},
+  year={2014}
+}
+
+@inproceedings{Shafique:CODES'14,
+  title={Dark silicon as a challenge for hardware/software co-design},
+  author={Muhammad Shafique and Siddharth Garg and Tulika Mitra and Sri Parameswaran and Jorg Henkel},
+  booktitle={Proc. International Conference on Hardware/Software Codesign and System Synthesis (CODES+ISSS)},
   year={2014}
 }
 
@@ -478,7 +522,6 @@ month ={June.},
   title={Hierarchical Power Management for Asymmetric Multi-Core in Dark Silicon Era},
   author={Thannirmalai Somu Muthukaruppan and Mihai Pricopi and Vanchinathan Venkataramani and Tulika Mitra and Sanjay Vishin},
   booktitle= dac,
-  pages={1--9},
   year={2013},
  month={May}
 }
@@ -761,4 +804,143 @@ Author = {Alyssa Bonnoit},
 Title = {Reducing Power using Body Biasing in Microprocessors With Dynamic Voltage/Frequency Scaling},
 School = {Carnegie Mellon University},
 Year = {2010},
+}
+
+@inproceedings{Liu:BMAS'06,
+  title={An Extended {SVD}-based Terminal and Model Order Reduction Algorithm},
+  author={Pu Liu and Sheldon Tan and Boyuan Yan and Bruce McGaughy},
+  booktitle= bmas,
+  pages={44--49},
+  month =  {Septermber},
+  year={2006},
+}
+
+@article{Christofides:CCE'13,
+  author={Panagiotis Christofides and Riccardo Scattolini and David {Munoz de la Pena} and Jinfeng Liu},
+  title={Distributed model predictive control: A tutorial review and future research directions},
+  journal = {Computers and Chemical Engineering},
+  year={2013},
+  volume = {51},
+  pages = {21--41},
+  month =  {April}
+}
+
+@inproceedings{Wu:DAC'06,
+  title={A systematic method for functional unit power estimation in microprocessors},
+  author={Wei Wu and Lingling Jin and Jim Yang and Pu Liu and Sheldon Tan},
+  booktitle= dac,
+  pages={554--557},
+  month =  {June},
+  year={2006},
+}
+
+@inproceedings{Powell:HPCA'09,
+  title={{CAMP}: A technique to estimate per-structure power at run-time using a few simple parameters},
+  author={Michael Powell and Arijit Biswas and Joel Emer and Shubhendu Mukherjee and Basit Sheikh and Shrirang Yardi},
+  booktitle= hpca,
+  pages={289--300},
+  month =  {Feburary},
+  year={2009},
+}
+
+@Article{Goulding-Hotta:MICRO'11,
+  author =       {Nathan Goulding-Hotta and Jack Sampson and Ganesh Venkatesh and Saturnino Garcia and Joe Auricchio and Po-Chao Huang and Manish Arora and Siddhartha Nath and Vikram Bhatt and Jonathan Babb and Steven Swanson and Michael Taylor},
+  title =        {The {GreenDroid} Mobile Application Processor: An Architecture for Silicon's Dark Future},
+  journal =      {IEEE Micro},
+  year =         {2011},
+  pages =    {86--95},
+  volume = {31},
+  number = {2},
+  month = {March-April},
+}
+
+@Article{Dreslinski:IEEEPROC'10,
+  author =       {Ronald Dreslinski and Michael Wieckowski and David Blaauw and Dennis Sylvester and Trevor Mudge},
+  title =        {Near-Threshold Computing: Reclaiming Moore's Law Through Energy Efficient Integrated Circuits},
+  journal =      ieeeproc,
+  year =         {2010},
+  pages =    {253--266},
+  volume = {98},
+  number = {2},
+  month = {February},
+}
+
+@inproceedings{Govindaraju:HPCA'11,
+  title={Dynamically Specialized Datapaths for energy efficient computing},
+  author={Venkatraman Govindaraju and Chen-Han Ho and Karthikeyan Sankaralingam},
+  booktitle= hpca,
+  pages={503--514},
+  month =  {Feburary},
+  year={2011},
+}
+
+@inproceedings{Henkel:DAC'15,
+  title={New Trends in Dark Silicon},
+  author={Jorg Henkel and Heba Khdr and Santiago Pagani and Muhammad Shafique},
+  booktitle= dac,
+  month =  {June},
+  year={2015},
+}
+
+@inproceedings{Zhan:DAC'14,
+  title={{NoC}-Sprinting: Interconnect for Fine-Grained Sprinting in the Dark Silicon Era},
+  author={Jian Zhan and Yuan Xie and Guangyu Sun},
+  booktitle= dac,
+  month =  {June},
+  year={2014},
+}
+
+@inproceedings{Bokhari:DAC'14,
+  title={{darkNoC}: Designing Energy-Efficient Network-on-Chip with Multi-Vt Cells for Dark Silicon},
+  author={Haseeb Bokhari and Haris Javaid and Muhammad Shafique and Jorg Henkel and Sri Parameswaran},
+  booktitle= dac,
+  month =  {June},
+  year={2014},
+}
+
+@inproceedings{Shafique:DATE'15,
+  title={Variability-aware dark silicon management in on-chip many-core systems},
+  author={Muhammad Shafique and Dennis Gnad and Siddharth Garg and Jorg Henkel},
+  booktitle= date,
+  month =  {March},
+  year={2015},
+  pages =    {387--392},
+}
+
+@inproceedings{Khan:ISLPED'15,
+  title={Hierarchical power budgeting for Dark Silicon chips},
+  author={Muhammad Khan and Muhammad Shafique and Jorg Henkel},
+  booktitle= islped,
+  month =  {July},
+  year={2015},
+  pages =    {213--218},
+}
+
+@inproceedings{Kanduri:ICCD'15,
+  title={Dark silicon aware runtime mapping for many-core systems: A patterning approach},
+  author={Anil Kanduri and Mohammad-Hashem Haghbayan and Amir-Mohammad Rahmani and Pasi Liljeberg and Axel Jantsch and Hannu Tenhunen},
+  booktitle= iccd,
+  month =  {October},
+  year={2015},
+  pages =    {573--580},
+}
+
+@inproceedings{Mesa-Martinez:ISCA'07,
+ author = {Francisco Mesa-Martinez and Joseph Nayfach-Battilana and Jose Renau},
+ title = {Power Model Validation Through Thermal Measurements},
+ booktitle = isca,
+ year = {2007},
+ month = {June},
+ location = {San Diego, CA, USA},
+ pages = {302--311},
+}
+
+@inproceedings{Biswas:ISCA'11,
+ author = {Susmit Biswas and Mohit Tiwari and Timothy Sherwood},
+ title = {Fighting fire with fire: Modeling the datacenter-scale effects of targeted superlattice thermal management},
+ booktitle = isca,
+ year = {2011},
+ month = {June},
+ location = {San Jose, CA, USA},
+ pages = {331--340},
 }
