thermal modelling bibs

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -944,3 +944,107 @@ Year = {2010},
  location = {San Jose, CA, USA},
  pages = {331--340},
 }
+
+@inproceedings{Lasance:SEMITHERM'95,
+ author = {C.~Lasance and H~Vinke and H~Rosten and K.-L.~Weiner},
+ title = {A Novel Approach for the Thermal Characterization of Electronic Parts},
+ booktitle = {Proceedings of the IEEE 11th Annual Semiconductor Thermal Measurement and Management Symposium},
+ year = {1995},
+ pages = {1-9},
+ location = {San Jose, California},
+ }
+
+@Article{Christiaens:TCPMT'98,
+  author =       {Filip~Christiaens and Bart~Vandevelde and Eric~Beyne and Robert Mertens and Jan Berghmans},
+  title =        {A Generic Methodology for Deriving Compact Dynamic Thermal Models, Applied to the {PSGA} Package},
+  journal =      {IEEE Transactions on Components, Packaging, and Manufacturing Technology, Part A},
+  year =         {1998},
+  OPTkey =       {},
+  volume =   {21},
+  number =   {4},
+  pages =     {565-576},
+  month =     {December},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
+@Article{Augustin:MEJ'05,
+  author =       {A.~Augustin and B.~Maj and A.~Kostka},
+  title =        {A structure oriented compact thermal model for multiple heat source {ASIC}s},
+  journal =      {Mircroelectronics Journal},
+  year =         {2005},
+  OPTkey =       {},
+  volume =   {36},
+  number =   {8},
+  pages =     {700-704},
+  month =     {August},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
+@Article{Gerstenmaier:MEJ'02,
+  author =       {Y.~C.~Gerstenmaier and G.~Wachutka},
+  title =        {Rigorous model and network for transient thermal problems},
+  journal =      {Mircroelectronics Journal},
+  year =         {2002},
+  OPTkey =       {},
+  volume =   {33},
+  issue = {9},
+  pages =     {719-725},
+  month =     {September},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
+@Article{Pape:TCPT'04,
+  author =       {Heinz Pape and Dirk Schweitzer and John {H. J.} Janssen and Arianna Morelli and Claudio M. Villa},
+  title =        {Thermal Transient Modeling and Experimental Validation in the European Project {PROFIT}},
+  journal =      {IEEE Tran. on Components and Pacakaging Technologies},
+  year =         {2004},
+  pages =    {530-538},
+  volume = {27},
+  number = {3},
+  month = {September},
+}
+
+@INPROCEEDINGS{Rencz:EPTC'03,
+    author = {M.~Rencz and G.~Farkas and V.~Sz\'{e}kely and A.~Poppe and B.~Courtois},
+    title = {Boundary Condition Independent Dynamic Compact Models of Packages and Heat Sinks from Thermal Transient Measurements},
+    booktitle = {Proceedings of the 5th Electronics Packaging Technology Conference},
+    year = {2003},
+    pages = {479-484},
+}
+
+@article{Li:TODAES'10,
+ author = {Li, Duo and Tan, Sheldon X.-D. and Pacheco, Eduardo H. and Tirumala, Murli},
+ title = {Parameterized architecture-level dynamic thermal models for multicore microprocessors},
+ journal = {ACM Trans. Des. Autom. Electron. Syst.},
+ volume = {15},
+ number = {2},
+ year = {2010},
+ issn = {1084-4309},
+ pages = {1--22},
+ doi = {http://doi.acm.org/10.1145/1698759.1698766},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
+@Article{Li:TVLSI'09,
+  author =       {D.~Li and S.~X.-D.~Tan and E.~H.~Pacheco and M.~Tirumala},
+  title =        {Architecture-level thermal characterization for multi-core microprocessors},
+  journal =      tvlsi,
+  year =         {2009},
+  volume =      {17},
+  number =      {10},
+  pages = {1495-1507},
+  }
+
+@Article{Yang:TCAD'07,
+  author =       {Y.~Yang and Z.~P.~Gu and C.~Zhu and R.~P.~Dick and L.~Shang},
+  title =        {{ISAC}: Integrated Space and Time Adaptive Chip-Package Thermal Analysis},
+  journal =       tcad,
+  year =         {2007},
+  pages =    {86-99},
+  volume = {16},
+  number = {1},
+}
