--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1048,3 +1048,52 @@ Year = {2010},
   volume = {16},
   number = {1},
 }
+
+@Book{Tan:Book'07,
+Author="Sheldon X.-D.~Tan and L.~He",
+Title="Advanced Model Order Reduction Techniques in {VLSI} Design",
+Year="2007",
+OPTedition={2nd},
+Publisher="Cambridge University Press",
+}
+
+@Book{Antoulas:Book'05,
+  author =   {A.~C.~Antoulas},
+  ALTeditor =    {},
+  title =        {Approximation of Large-Scale Dynamical Systems},
+  publisher =    {The Society for Industrial and Applied Mathematics (SIAM)},
+  year =         {2005},
+}
+
+@article{Phillips:TCAD'05,
+author={J.~R.~Phillips and L.~M.~Silveira},
+title={Poor man's {TBR}: a simple model reduction scheme},
+journal = tcad,
+pages = {43- 55},
+volume = {24},
+number = {1},
+year = {2005},
+}
+
+@Book{Grimme:Thesis'97,
+Author="E.~J.~Grimme",
+Title="Krylov projection methods for model reduction ({P}h.{D}. {T}hesis)",
+Year="1997",
+Publisher="University of Illinois at Urbana-Champaign"
+}
+
+@conference{Yan:ICCAD'08,
+author={B.~Yan and S.~X-.D.~Tan and G.~Chen and L.~Wu},
+title={Modeling and simulation for on-chip power grid networks by locally dominant Krylov subspace method},
+booktitle= iccad,
+pages = {744-749},
+year={2008},
+}
+
+@article{Pilleggi:TCAD'98,
+ title="{PRIMA}: Passive Reduced-order Interconnect Macromodeling Algorithm",
+ author="A. Odabasioglu and M. Celik and L.T. Pileggi",
+ journal=tcad,
+ year="1998",
+ pages="645-654",
+}
